<resources>
    <string name="app_name">Britto</string>
    <string name="app_name_full">BRITTO’S HEALTH CARE</string>
    <string name="app_heading">Welcome User !</string>
    <string name="compy">Chillar Payments Solutions Pvt ltd</string>
    <string name="currency">₹</string>
    <string name="head">Welcome User</string>
    <string name="sub_title">Sign up to get started by verify your mobile number!</string>
    <string name="pro_msg">Menu</string>
    <string name="ver">"Version\u0020"</string>
    <string name="rupee">ر.ع.</string>
    <string name="rps">150ر.ع.  to ر.ع.100</string>

    <!--  B2C DOCTOR-->
    <string name="add_ser">Add services</string>
    <string name="post_menu">Become a recruiter</string>
    <string name="job_menu">Job Portal</string>
    <string name="profile_menu">Account</string>

    <!--  INPUT-->
    <string name="enter_empty">Mandatory</string>
    <string name="savepic"><u>Click to here to Save Picture</u></string>
    <string name="enter_provi">Choose a province</string>
    <string name="enter_brand">Select a brand</string>
    <string name="enter_cat">Select a category</string>
    <string name="enter_display_name">Enter display name</string>
    <string name="enter_mobile_number">Enter phone number</string>
    <string name="enter_key">Job title or company name</string>
    <string name="enter_city">City</string>
    <string name="enter_dis">5 miles</string>
    <string name="search">Find a  medicine or product ...</string>
    <string name="search_txt">Search</string>
    <string name="profile_details">Public Profile View</string>
    <string name="job_title">Job Title</string>
    <string name="job_type"> Job Type</string>
    <string name="salary">Maximum Salary</string>
    <string name="exp">Experience Required</string>
    <string name="job_desc">Job Description</string>
    <string name="job_feature">Job key features</string>
    <string name="no_camera">Please a phone with camera</string>
    <string name="no_profile_pic">Please take a photo </string>

    <string name="fullname"> Full Name</string>
    <string name="degree"> Education</string>
    <string name="desig">Designation</string>
    <string name="about"> Short Description</string>
    <string name="worknghrs"> PostCode</string>
    <string name="fee"> Consultation fee</string>
    <string name="addres"> Location</string>
    <string name="interval">Consultation Duration</string>
    <string name="working_hrs">Working Hours Management</string>
    <string name="enter_name">Enter Full name</string>
    <string name="enter_address">Address</string>
    <string name="enter_shop_name">Business Registered name</string>
    <string name="enter_shop_add">Building/House Number</string>
    <string name="enter_shop_street">Street Name</string>
    <string name="enter_shop_area">Area/District</string>
    <string name="enter_shop_city">City/Town</string>
    <string name="enter_shop_gov">Governorate</string>
    <string name="enter_shop_pin">Postal Code</string>
    <string name="enter_shop_proname">Contact person name</string>
    <string name="enter_shop_email">Email address</string>
    <string name="enter_shop_loc">Pin shop location</string>
    <string name="enter_bank_acc">Bank account number</string>
    <string name="enter_bank_acc_re">Re-enter bank account number</string>
    <string name="enter_bank_ifsc">IFSC code</string>
    <string name="enter_bank_name">Bank account holder’s name</string>
    <string name="enter_staff_name">Staff name</string>
    <string name="enter_staff_mob">Staff mobile number</string>
    <string name="enter_staff_ser">Choose service</string>
    <string name="enter_staff_rate">Service charge</string>
    <string name="enter_staff_hours">Working hours</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="sunday">sunday</string>

    <!--  HEADING-->
    <string name="version">"Version\u0020"</string>
    <string name="map">Select Location</string>
    <string name="jobhead">Job Description</string>
    <string name="jobreghead">Requirements</string>
    <string name="cart">Cart</string>
    <string name="stock">Stock</string>
    <string name="service">Popular Services</string>
    <string name="pharm">Pharmacies</string>
    <string name="hospi">Hospitals</string>
    <string name="doc">Doctors</string>
    <string name="ord">Order History</string>
    <string name="job">Job Seekers</string>
    <string name="agree_tnc_one">By continuing,you agree to our </string>
    <string name="opt_message">We have send a 6 digit OTP to the WhatsApp number xxxxxx6378</string>
    <string name="alert_heading">Are you sure?</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_expired">OTP expired</string>
    <string name="otp_head">Verify mobile number</string>
    <string name="general_head">Choose business &amp; continue</string>
    <string name="note">Note</string>
    <string name="subttl">Subtotal</string>
    <string name="loc">Location</string>
    <string name="dist">Distance</string>
    <string name="key">Keywords</string>

    <!--  BUTTON-->
    <string name="book_doc">Direct Call Book</string>
    <string name="book_doc_cst"> No Booking Fee</string>
    <string name="otp_mob">Get verification code</string>
    <string name="contpay">Proceed to chekout</string>
    <string name="order">Confirm Order</string>
    <string name="retry">try again</string>
    <string name="applyjob">Apply this job</string>
    <string name="no_net">No Internet Connection</string>
    <string name="add_item">Add Item</string>

    <string name="contin">Continue</string>
    <string name="book">View Booking</string>
    <string name="wait">Please Wait For Otp</string>
    <string name="register">Register</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="next">Continue</string>
    <string name="skip">Skip</string>
    <string name="cancel">Cancel</string>
    <string name="signup"> New or Existing User?</string>
    <string name="update">Update</string>
    <string name="print_bill">Print bill</string>
    <string name="bck_home">Back to home</string>
    <string name="bill">Generate bill</string>
    <string name="conti_loc">Generate bill</string>
    <string name="add_loc">Add location</string>
    <string name="confrm_loc">Confirm Location</string>
    <string name="menu_one">Centralized Medical Solutions</string>
    <string name="menu_two">Register You business</string>

    <string name="here">Here -></string>
    <string name="time_head">Working hours</string>


    <!--  Validation-->
    <string name="mob_validation">Enter Valid Mobile Number</string>
    <string name="name_validation">Enter Full Name</string>
    <!--  MESSAGE-->
    <string name="notify">Notification</string>
    <string name="logout">Logout</string>
    <string name="signin">Sign In</string>
    <string name="logout_alert_message">Are you sure you want to logout?</string>
    <string name="pop_alert_message">Are you sure you want to go back?</string>
    <string name="type_alert_message">Abstract: Welcome to our platform! Whether you\'re a valued customer seeking quality products or a business partner eager to showcase your offerings, we provide a seamless experience tailored to your needs.</string>
    <string name="type_esti_message">Prescription Medications: For prescription items, you may be required to sign a pickup form or provide additional information as per regulatory requirements. Our staff will guide you through the necessary steps.</string>
    <string name="esti_head">Add delivery instruction:</string>
    <string name="esti_message">Please collect your medical items from the designated pickup area during operational hours. Kindly present your order number for efficient processing. Thank you.</string>
    <string name="enter_service">Applicant Name</string>
    <string name="enter_service_rate">Phone Number</string>
    <string name="enter_service_min">min experience</string>
    <string name="add_brand">Add brand</string>
</resources>